--- a/tests/email-analysis.ipynb
+++ b/tests/email-analysis.ipynb
@@ -593,27 +593,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ImportError",
-     "evalue": "lxml not found, please install it",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "\u001b[1;32m/workspaces/cai-advanced-processing-service/tests/email-analysis.ipynb Cell 9'\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> <a href='vscode-notebook-cell://dev-container%2B633a5c55736572735c616c6962696e615c736f757263655c7265706f735c6e65775f6361695f736572766963655c6361692d616476616e6365642d70726f63657373696e672d73657276696365/workspaces/cai-advanced-processing-service/tests/email-analysis.ipynb#ch0000008vscode-remote?line=0'>1</a>\u001b[0m txt \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39;49mread_html(\u001b[39m'\u001b[39;49m\u001b[39m./files/email.html\u001b[39;49m\u001b[39m'\u001b[39;49m)\n",
-      "File \u001b[0;32m/usr/local/lib/python3.8/site-packages/pandas/util/_decorators.py:311\u001b[0m, in \u001b[0;36mdeprecate_nonkeyword_arguments.<locals>.decorate.<locals>.wrapper\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m    <a href='file:///usr/local/lib/python3.8/site-packages/pandas/util/_decorators.py?line=304'>305</a>\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mlen\u001b[39m(args) \u001b[39m>\u001b[39m num_allow_args:\n\u001b[1;32m    <a href='file:///usr/local/lib/python3.8/site-packages/pandas/util/_decorators.py?line=305'>306</a>\u001b[0m     warnings\u001b[39m.\u001b[39mwarn(\n\u001b[1;32m    <a href='file:///usr/local/lib/python3.8/site-packages/pandas/util/_decorators.py?line=306'>307</a>\u001b[0m         msg\u001b[39m.\u001b[39mformat(arguments\u001b[39m=\u001b[39marguments),\n\u001b[1;32m    <a href='file:///usr/local/lib/python3.8/site-packages/pandas/util/_decorators.py?line=307'>308</a>\u001b[0m         \u001b[39mFutureWarning\u001b[39;00m,\n\u001b[1;32m    <a href='file:///usr/local/lib/python3.8/site-packages/pandas/util/_decorators.py?line=308'>309</a>\u001b[0m         stacklevel\u001b[39m=\u001b[39mstacklevel,\n\u001b[1;32m    <a href='file:///usr/local/lib/python3.8/site-packages/pandas/util/_decorators.py?line=309'>310</a>\u001b[0m     )\n\u001b[0;32m--> <a href='file:///usr/local/lib/python3.8/site-packages/pandas/util/_decorators.py?line=310'>311</a>\u001b[0m \u001b[39mreturn\u001b[39;00m func(\u001b[39m*\u001b[39;49margs, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n",
-      "File \u001b[0;32m/usr/local/lib/python3.8/site-packages/pandas/io/html.py:1113\u001b[0m, in \u001b[0;36mread_html\u001b[0;34m(io, match, flavor, header, index_col, skiprows, attrs, parse_dates, thousands, encoding, decimal, converters, na_values, keep_default_na, displayed_only)\u001b[0m\n\u001b[1;32m   <a href='file:///usr/local/lib/python3.8/site-packages/pandas/io/html.py?line=1108'>1109</a>\u001b[0m validate_header_arg(header)\n\u001b[1;32m   <a href='file:///usr/local/lib/python3.8/site-packages/pandas/io/html.py?line=1110'>1111</a>\u001b[0m io \u001b[39m=\u001b[39m stringify_path(io)\n\u001b[0;32m-> <a href='file:///usr/local/lib/python3.8/site-packages/pandas/io/html.py?line=1112'>1113</a>\u001b[0m \u001b[39mreturn\u001b[39;00m _parse(\n\u001b[1;32m   <a href='file:///usr/local/lib/python3.8/site-packages/pandas/io/html.py?line=1113'>1114</a>\u001b[0m     flavor\u001b[39m=\u001b[39;49mflavor,\n\u001b[1;32m   <a href='file:///usr/local/lib/python3.8/site-packages/pandas/io/html.py?line=1114'>1115</a>\u001b[0m     io\u001b[39m=\u001b[39;49mio,\n\u001b[1;32m   <a href='file:///usr/local/lib/python3.8/site-packages/pandas/io/html.py?line=1115'>1116</a>\u001b[0m     match\u001b[39m=\u001b[39;49mmatch,\n\u001b[1;32m   <a href='file:///usr/local/lib/python3.8/site-packages/pandas/io/html.py?line=1116'>1117</a>\u001b[0m     header\u001b[39m=\u001b[39;49mheader,\n\u001b[1;32m   <a href='file:///usr/local/lib/python3.8/site-packages/pandas/io/html.py?line=1117'>1118</a>\u001b[0m     index_col\u001b[39m=\u001b[39;49mindex_col,\n\u001b[1;32m   <a href='file:///usr/local/lib/python3.8/site-packages/pandas/io/html.py?line=1118'>1119</a>\u001b[0m     skiprows\u001b[39m=\u001b[39;49mskiprows,\n\u001b[1;32m   <a href='file:///usr/local/lib/python3.8/site-packages/pandas/io/html.py?line=1119'>1120</a>\u001b[0m     parse_dates\u001b[39m=\u001b[39;49mparse_dates,\n\u001b[1;32m   <a href='file:///usr/local/lib/python3.8/site-packages/pandas/io/html.py?line=1120'>1121</a>\u001b[0m     thousands\u001b[39m=\u001b[39;49mthousands,\n\u001b[1;32m   <a href='file:///usr/local/lib/python3.8/site-packages/pandas/io/html.py?line=1121'>1122</a>\u001b[0m     attrs\u001b[39m=\u001b[39;49mattrs,\n\u001b[1;32m   <a href='file:///usr/local/lib/python3.8/site-packages/pandas/io/html.py?line=1122'>1123</a>\u001b[0m     encoding\u001b[39m=\u001b[39;49mencoding,\n\u001b[1;32m   <a href='file:///usr/local/lib/python3.8/site-packages/pandas/io/html.py?line=1123'>1124</a>\u001b[0m     decimal\u001b[39m=\u001b[39;49mdecimal,\n\u001b[1;32m   <a href='file:///usr/local/lib/python3.8/site-packages/pandas/io/html.py?line=1124'>1125</a>\u001b[0m     converters\u001b[39m=\u001b[39;49mconverters,\n\u001b[1;32m   <a href='file:///usr/local/lib/python3.8/site-packages/pandas/io/html.py?line=1125'>1126</a>\u001b[0m     na_values\u001b[39m=\u001b[39;49mna_values,\n\u001b[1;32m   <a href='file:///usr/local/lib/python3.8/site-packages/pandas/io/html.py?line=1126'>1127</a>\u001b[0m     keep_default_na\u001b[39m=\u001b[39;49mkeep_default_na,\n\u001b[1;32m   <a href='file:///usr/local/lib/python3.8/site-packages/pandas/io/html.py?line=1127'>1128</a>\u001b[0m     displayed_only\u001b[39m=\u001b[39;49mdisplayed_only,\n\u001b[1;32m   <a href='file:///usr/local/lib/python3.8/site-packages/pandas/io/html.py?line=1128'>1129</a>\u001b[0m )\n",
-      "File \u001b[0;32m/usr/local/lib/python3.8/site-packages/pandas/io/html.py:915\u001b[0m, in \u001b[0;36m_parse\u001b[0;34m(flavor, io, match, attrs, encoding, displayed_only, **kwargs)\u001b[0m\n\u001b[1;32m    <a href='file:///usr/local/lib/python3.8/site-packages/pandas/io/html.py?line=912'>913</a>\u001b[0m retained \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m\n\u001b[1;32m    <a href='file:///usr/local/lib/python3.8/site-packages/pandas/io/html.py?line=913'>914</a>\u001b[0m \u001b[39mfor\u001b[39;00m flav \u001b[39min\u001b[39;00m flavor:\n\u001b[0;32m--> <a href='file:///usr/local/lib/python3.8/site-packages/pandas/io/html.py?line=914'>915</a>\u001b[0m     parser \u001b[39m=\u001b[39m _parser_dispatch(flav)\n\u001b[1;32m    <a href='file:///usr/local/lib/python3.8/site-packages/pandas/io/html.py?line=915'>916</a>\u001b[0m     p \u001b[39m=\u001b[39m parser(io, compiled_match, attrs, encoding, displayed_only)\n\u001b[1;32m    <a href='file:///usr/local/lib/python3.8/site-packages/pandas/io/html.py?line=917'>918</a>\u001b[0m     \u001b[39mtry\u001b[39;00m:\n",
-      "File \u001b[0;32m/usr/local/lib/python3.8/site-packages/pandas/io/html.py:872\u001b[0m, in \u001b[0;36m_parser_dispatch\u001b[0;34m(flavor)\u001b[0m\n\u001b[1;32m    <a href='file:///usr/local/lib/python3.8/site-packages/pandas/io/html.py?line=869'>870</a>\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m    <a href='file:///usr/local/lib/python3.8/site-packages/pandas/io/html.py?line=870'>871</a>\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m _HAS_LXML:\n\u001b[0;32m--> <a href='file:///usr/local/lib/python3.8/site-packages/pandas/io/html.py?line=871'>872</a>\u001b[0m         \u001b[39mraise\u001b[39;00m \u001b[39mImportError\u001b[39;00m(\u001b[39m\"\u001b[39m\u001b[39mlxml not found, please install it\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m    <a href='file:///usr/local/lib/python3.8/site-packages/pandas/io/html.py?line=872'>873</a>\u001b[0m \u001b[39mreturn\u001b[39;00m _valid_parsers[flavor]\n",
-      "\u001b[0;31mImportError\u001b[0m: lxml not found, please install it"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "txt = \"\"\"\n",
+    "html_doc = \"\"\"\n",
     "<tbody><tr><td>1</td><td><img src=\"/load_content.php?u=gmail.com\" style=\"width:24px; height:24px;\"></td><td>gmail.com</td><td>17.74% </td></tr>\n",
     "    <tr><td>2</td><td><img src=\"/load_content.php?u=yahoo.com\" style=\"width:24px; height:24px;\"></td><td>yahoo.com</td><td>17.34% </td></tr>\n",
     "    <tr><td>3</td><td><img src=\"/load_content.php?u=hotmail.com\" style=\"width:24px; height:24px;\"></td><td>hotmail.com</td><td>15.53% </td></tr>\n",
@@ -715,6 +699,155 @@
     "    <tr><td>99</td><td><img src=\"/load_content.php?u=aim.com\" style=\"width:24px; height:24px;\"></td><td>aim.com</td><td>0.04% </td></tr>\n",
     "    <tr><td>100</td><td><img src=\"/load_content.php?u=bigpond.net.au\" style=\"width:24px; height:24px;\"></td><td>bigpond.net.au</td><td>0.04% </td></tr>\n",
     "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from bs4 import BeautifulSoup\n",
+    "soup = BeautifulSoup(html_doc, 'html.parser')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "domains = [i.get('src').split('=')[1] for i in soup.find_all('img')]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "domains_dict = {}\n",
+    "for i in domains:\n",
+    "     domains_dict[i.replace('.', '')] = i"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'gmailcom': 'gmail.com',\n",
+       " 'yahoocom': 'yahoo.com',\n",
+       " 'hotmailcom': 'hotmail.com',\n",
+       " 'aolcom': 'aol.com',\n",
+       " 'hotmailcouk': 'hotmail.co.uk',\n",
+       " 'hotmailfr': 'hotmail.fr',\n",
+       " 'msncom': 'msn.com',\n",
+       " 'yahoofr': 'yahoo.fr',\n",
+       " 'wanadoofr': 'wanadoo.fr',\n",
+       " 'orangefr': 'orange.fr',\n",
+       " 'comcastnet': 'comcast.net',\n",
+       " 'yahoocouk': 'yahoo.co.uk',\n",
+       " 'yahoocombr': 'yahoo.com.br',\n",
+       " 'yahoocoin': 'yahoo.co.in',\n",
+       " 'livecom': 'live.com',\n",
+       " 'rediffmailcom': 'rediffmail.com',\n",
+       " 'freefr': 'free.fr',\n",
+       " 'gmxde': 'gmx.de',\n",
+       " 'webde': 'web.de',\n",
+       " 'yandexru': 'yandex.ru',\n",
+       " 'ymailcom': 'ymail.com',\n",
+       " 'liberoit': 'libero.it',\n",
+       " 'outlookcom': 'outlook.com',\n",
+       " 'uolcombr': 'uol.com.br',\n",
+       " 'bolcombr': 'bol.com.br',\n",
+       " 'mailru': 'mail.ru',\n",
+       " 'coxnet': 'cox.net',\n",
+       " 'hotmailit': 'hotmail.it',\n",
+       " 'sbcglobalnet': 'sbcglobal.net',\n",
+       " 'sfrfr': 'sfr.fr',\n",
+       " 'livefr': 'live.fr',\n",
+       " 'verizonnet': 'verizon.net',\n",
+       " 'livecouk': 'live.co.uk',\n",
+       " 'googlemailcom': 'googlemail.com',\n",
+       " 'yahooes': 'yahoo.es',\n",
+       " 'igcombr': 'ig.com.br',\n",
+       " 'livenl': 'live.nl',\n",
+       " 'bigpondcom': 'bigpond.com',\n",
+       " 'terracombr': 'terra.com.br',\n",
+       " 'yahooit': 'yahoo.it',\n",
+       " 'neuffr': 'neuf.fr',\n",
+       " 'yahoode': 'yahoo.de',\n",
+       " 'aliceit': 'alice.it',\n",
+       " 'rocketmailcom': 'rocketmail.com',\n",
+       " 'attnet': 'att.net',\n",
+       " 'lapostenet': 'laposte.net',\n",
+       " 'facebookcom': 'facebook.com',\n",
+       " 'bellsouthnet': 'bellsouth.net',\n",
+       " 'yahooin': 'yahoo.in',\n",
+       " 'hotmailes': 'hotmail.es',\n",
+       " 'charternet': 'charter.net',\n",
+       " 'yahooca': 'yahoo.ca',\n",
+       " 'yahoocomau': 'yahoo.com.au',\n",
+       " 'ramblerru': 'rambler.ru',\n",
+       " 'hotmailde': 'hotmail.de',\n",
+       " 'tiscaliit': 'tiscali.it',\n",
+       " 'shawca': 'shaw.ca',\n",
+       " 'yahoocojp': 'yahoo.co.jp',\n",
+       " 'skycom': 'sky.com',\n",
+       " 'earthlinknet': 'earthlink.net',\n",
+       " 'optonlinenet': 'optonline.net',\n",
+       " 'freenetde': 'freenet.de',\n",
+       " 't-onlinede': 't-online.de',\n",
+       " 'aliceadslfr': 'aliceadsl.fr',\n",
+       " 'virgilioit': 'virgilio.it',\n",
+       " 'homenl': 'home.nl',\n",
+       " 'qqcom': 'qq.com',\n",
+       " 'telenetbe': 'telenet.be',\n",
+       " 'mecom': 'me.com',\n",
+       " 'yahoocomar': 'yahoo.com.ar',\n",
+       " 'tiscalicouk': 'tiscali.co.uk',\n",
+       " 'yahoocommx': 'yahoo.com.mx',\n",
+       " 'voilafr': 'voila.fr',\n",
+       " 'gmxnet': 'gmx.net',\n",
+       " 'mailcom': 'mail.com',\n",
+       " 'planetnl': 'planet.nl',\n",
+       " 'tinit': 'tin.it',\n",
+       " 'liveit': 'live.it',\n",
+       " 'ntlworldcom': 'ntlworld.com',\n",
+       " 'arcorde': 'arcor.de',\n",
+       " 'yahoocoid': 'yahoo.co.id',\n",
+       " 'frontiernetnet': 'frontiernet.net',\n",
+       " 'hetnetnl': 'hetnet.nl',\n",
+       " 'livecomau': 'live.com.au',\n",
+       " 'yahoocomsg': 'yahoo.com.sg',\n",
+       " 'zonnetnl': 'zonnet.nl',\n",
+       " 'club-internetfr': 'club-internet.fr',\n",
+       " 'junocom': 'juno.com',\n",
+       " 'optusnetcomau': 'optusnet.com.au',\n",
+       " 'blueyondercouk': 'blueyonder.co.uk',\n",
+       " 'bluewinch': 'bluewin.ch',\n",
+       " 'skynetbe': 'skynet.be',\n",
+       " 'sympaticoca': 'sympatico.ca',\n",
+       " 'windstreamnet': 'windstream.net',\n",
+       " 'maccom': 'mac.com',\n",
+       " 'centurytelnet': 'centurytel.net',\n",
+       " 'chellonl': 'chello.nl',\n",
+       " 'liveca': 'live.ca',\n",
+       " 'aimcom': 'aim.com',\n",
+       " 'bigpondnetau': 'bigpond.net.au'}"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "domains_dict"
    ]
   },
   {
